# endurox-java

./: .gitignore  CMakeLists.txt  README  README.md  build.xml  findclasses.c
doc/guides/: CMakeLists.txt  class_diagram.dia  getting_started_tutorial.adoc  key_objects.dia  module_developer_guide.adoc
exjld/: CMakeLists.txt  allocator.c  codegen.c  emb.c  exjld.c  exjld.h  findclasses.c  resources.c
libexjlds/: BytesURLConnection.java  BytesURLHandler.java  CMakeLists.txt  StaticClassLoader.java  cp.c  except.c  exj.c  exj.h
libsrc/: AtmiBuf.c  AtmiBuf.java  AtmiConstants.java  AtmiCtx.c  AtmiCtx.java  CMakeLists.txt  ErrorTuple.java  TypedBuffer.c  TypedCarray.java  TypedJson.java  TypedView.java  build.xml  exceptions.c  libsrc.h  run.sh
libsrc/c/: AtmiBuf.c  AtmiCtx.c  AtmiCtx_Util.c  AtmiCtx_unsol.c  BExprTree.c  BFldLocInfo.c  BNextResult.c  CMakeLists.txt  ClientId.c  MetaCache.c  TPQCTL.c  TPTRANID.c  TermSigHandler.c  TpCallResult.c  TpSvcInfo.c  TpTypesResult.c  TpgetrplyResult.c  TprecvResult.c  TypedBuffer.c  TypedCarray.c  TypedJson.c  TypedString.c  TypedUBF.c  TypedUBF_Badd.c  TypedUBF_Baddfast.c  TypedUBF_Bbool.c  TypedUBF_Bchg.c  TypedUBF_Bget.c  TypedUBF_Bool.c  TypedUbf_Badd.c  TypedUbf_Baddfast.c  TypedUbf_Bbool.c  TypedUbf_Bchg.c  TypedUbf_Bget.c  TypedUbf_Bprint.c  TypedUbf_Bproj.c  TypedUbf_Del.c  TypedUbf_Proj.c  TypedUbf_Util.c  conversations.c  (+14 more)
libsrc/exceptions/: AtmiException.java  AtmiTPEABORTException.java  AtmiTPEBADDESCException.java  AtmiTPEBLOCKException.java  AtmiTPEDIAGNOSTICException.java  AtmiTPEEVENTException.java  AtmiTPEHAZARDException.java  AtmiTPEHEURISTICException.java  AtmiTPEINVALException.java  AtmiTPEITYPEException.java  AtmiTPELIMITException.java  AtmiTPEMATCHException.java  AtmiTPEMIBException.java  AtmiTPENOENTException.java  AtmiTPEOSException.java  AtmiTPEOTYPEException.java  AtmiTPEPERMException.java  AtmiTPEPROTOException.java  AtmiTPERELEASEException.java  AtmiTPERFU26Exception.java  AtmiTPERFU27Exception.java  AtmiTPERFU28Exception.java  AtmiTPERFU29Exception.java  AtmiTPERMERRException.java  AtmiTPESVCERRException.java  AtmiTPESVCFAILException.java  AtmiTPESYSTEMException.java  AtmiTPETIMEException.java  AtmiTPETRANException.java  AtmiTPGOTSIGException.java  AtmiTPINITFAILException.java  NstdException.java  NstdNEFORMATException.java  NstdNEINVALException.java  NstdNEINVALINIException.java  NstdNEINVALKEYException.java  NstdNELIMITException.java  NstdNEMALLOCException.java  NstdNEMANDATORYException.java  NstdNENOCONNException.java  (+29 more)
libsrc/java/org/endurox/: AtmiBuf.java  AtmiBufInfo.java  AtmiBufRef.java  AtmiConst.java  AtmiConstants.java  AtmiCtx.java  BExprTree.java  BFldLocInfo.java  BNextResult.java  Bboolcbf.java  ClientID.java  ClientId.java  ErrorTuple.java  ExXid.java  Server.java  Service.java  StopWatch.java  TPQCTL.java  TPTRANID.java  TpInit.java  TpSvcInfo.java  TpTypesResult.java  TpgetrplyResult.java  TprecvResult.java  TypedBuffer.java  TypedCarray.java  TypedJson.java  TypedNull.java  TypedString.java  TypedTpInit.java  TypedUBF.java  TypedUbf.java  TypedUbfMarshaller.java  TypedView.java  UbfField.java  UnsolCallback.java  XidList.java
libsrc/java/org/endurox/exceptions/: AtmiException.java  AtmiTPEABORTException.java  AtmiTPEBADDESCException.java  AtmiTPEBLOCKException.java  AtmiTPEDIAGNOSTICException.java  AtmiTPEEVENTException.java  AtmiTPEHAZARDException.java  AtmiTPEHEURISTICException.java  AtmiTPEINVALException.java  AtmiTPEITYPEException.java  AtmiTPELIMITException.java  AtmiTPEMATCHException.java  AtmiTPEMIBException.java  AtmiTPENOENTException.java  AtmiTPEOSException.java  AtmiTPEOTYPEException.java  AtmiTPEPERMException.java  (+54 more)
libsrc/org/endurox/: AtmiBuf.java  AtmiConstants.java  TypedCarray.java  TypedUbf.java
libsrc/org/endurox/exceptions/: AtmiTPEHAZARDException.java  AtmiTPEHEURISTICException.java  AtmiTPEITYPEException.java  AtmiTPELIMITException.java  AtmiTPENOENTException.java  AtmiTPEOTYPEException.java  AtmiTPERFU26Exception.java  AtmiTPERMERRException.java  AtmiTPESVCERRException.java  AtmiTPETRANException.java  AtmiTPGOTSIGException.java  AtmiTPINITFAILException.java  NstdNEFORMATException.java  NstdNEINVALINIException.java  NstdNEMALLOCException.java  NstdNENOCONNException.java  NstdNEUNIXException.java  UbfBBADACMException.java  UbfBBADFLDException.java  UbfBBADNAMEException.java  UbfBEBADOPException.java  UbfBEINVALException.java  UbfBERFU0Exception.java  UbfBERFU1Exception.java  UbfBFTOPENException.java  UbfBNOCNAMEException.java  UbfBNOTPRESException.java  UbfBTYPERRException.java  UbfBVFOPENException.java  generate.sh
tests/00_unit/: AtmiCtxGetBuffers.java  AtmiCtxTest.java  BDelTest.java  BMarshalClassArray.java  BMarshalClassMand.java  BMarshalClassMandOpt2.java  BMarshalClassOpt.java  BMarshalClassSingle.java  BMarshalTest.java  BProjTest.java  BaddTest.java  BaddfastTest.java  BboolTest.java  BboolTest1.java  BchgTest.java  BjsonTest.java  BprintTest.java  BprojTest.java  ButilTest.java  CMakeLists.txt  LoggerTest.java  TypedBufferTest.java  TypedCarrayTest.java  TypedJsonTest.java  TypedStringTest.java  run.sh  settings.ini
tests/00_unit/conf/: java.ini
tests/00_unit/ubftab/: test.fd
tests/01_basic_server/src/jserver01_2/: CMakeLists.txt  CarrayRsp.java  CarrayRspFail.java  CarrayRspFail10.java  Convsv.java  DropRsp.java  ExceptRsp.java  GlobBroad.java  GlobNotif.java  JServer01_2.java  JsonRsp.java  JsonRspFail.java  JsonRspFail10.java  NullRsp.java  NullRspFail.java  NullRspFail10.java  NullSvc.java  StringRsp.java  StringRspFail.java  StringRspFail10.java  UbfConv.java  UbfE11Rsp.java  UbfOkFwd1.java  UbfRsp.java  UbfRspFail.java  UbfRspFail10.java  UbfToutRsp.java  ViewRsp.java  ViewRspFail.java  ViewRspFail10.java  jview01.v_in
tests/01_basic_server/src/unit/: CMakeLists.txt  CltThreads.java  Commons.java  Conversations.java  ExceptionTests.java  QueueTests.java  SrvThreads.java  TpBroadcastTests.java  TpForward.java  TpNotifyTests.java  TpacallTests.java  TpcallTests.java  tpacallTests.java
xadrv/: CMakeLists.txt  exjdbc.c  exjdbc.h  javaenv.c
(+96 files in other folders)
